--- a/src/Sulu/Bundle/MediaBundle/Resources/public/css/main.css
+++ b/src/Sulu/Bundle/MediaBundle/Resources/public/css/main.css
@@ -201,24 +201,23 @@
 /* line 92, ../scss/modules/media-selection.scss */
 .media-selection-overlay-toolbar-container {
   display: inline-block;
-  margin-bottom: 10px;
 }
 
-/* line 97, ../scss/modules/media-selection.scss */
+/* line 96, ../scss/modules/media-selection.scss */
 .media-selection-overlay-content {
   height: 100%;
-  padding: 10px 0 10px 20px;
+  padding: 15px 0 10px 20px;
   overflow: hidden;
   position: relative;
 }
 
-/* line 104, ../scss/modules/media-selection.scss */
+/* line 103, ../scss/modules/media-selection.scss */
 .media-selection-overlay-content-area {
   overflow: auto;
   height: calc(100% - 55px);
 }
 
-/* line 109, ../scss/modules/media-selection.scss */
+/* line 108, ../scss/modules/media-selection.scss */
 .media-selection-overlay-close {
   position: absolute;
   top: 10px;
@@ -227,47 +226,47 @@
   cursor: pointer;
 }
 
-/* line 118, ../scss/modules/media-selection.scss */
+/* line 117, ../scss/modules/media-selection.scss */
 .media-selection-overlay-add .heading {
   width: 100%;
   border-bottom: 2px #ccc solid;
 }
-/* line 122, ../scss/modules/media-selection.scss */
+/* line 121, ../scss/modules/media-selection.scss */
 .media-selection-overlay-add h3 {
   font-size: 16px;
   margin-top: 20px;
   margin-bottom: 10px;
 }
-/* line 127, ../scss/modules/media-selection.scss */
+/* line 126, ../scss/modules/media-selection.scss */
 .media-selection-overlay-add .overlay-loader {
   margin: 20px 0;
 }
 
-/* line 132, ../scss/modules/media-selection.scss */
+/* line 131, ../scss/modules/media-selection.scss */
 .media-selection-overlay-dropzone-container {
   padding-right: 20px;
 }
-/* line 135, ../scss/modules/media-selection.scss */
+/* line 134, ../scss/modules/media-selection.scss */
 .media-selection-overlay-dropzone-container > .husky-dropzone {
   display: none;
   margin-top: 30px;
   margin-bottom: 20px;
 }
-/* line 140, ../scss/modules/media-selection.scss */
+/* line 139, ../scss/modules/media-selection.scss */
 .media-selection-overlay-dropzone-container > .husky-dropzone.dropped {
   display: block;
 }
-/* line 145, ../scss/modules/media-selection.scss */
+/* line 144, ../scss/modules/media-selection.scss */
 .media-selection-overlay-dropzone-container > div {
   width: 100% !important;
 }
-/* line 148, ../scss/modules/media-selection.scss */
+/* line 147, ../scss/modules/media-selection.scss */
 .media-selection-overlay-dropzone-container .husky-overlay-wrapper {
   position: absolute !important;
   top: 0 !important;
   left: 0 !important;
 }
-/* line 153, ../scss/modules/media-selection.scss */
+/* line 152, ../scss/modules/media-selection.scss */
 .media-selection-overlay-dropzone-container .husky-overlay-container {
   position: absolute !important;
   top: 0 !important;
@@ -278,43 +277,43 @@
   height: 100%;
   background-color: rgba(255, 255, 255, 0.95);
 }
-/* line 163, ../scss/modules/media-selection.scss */
+/* line 162, ../scss/modules/media-selection.scss */
 .media-selection-overlay-dropzone-container .husky-overlay-container .slides {
   margin: 0;
   padding: 0;
 }
-/* line 168, ../scss/modules/media-selection.scss */
+/* line 167, ../scss/modules/media-selection.scss */
 .media-selection-overlay-dropzone-container .husky-overlay-container .slide {
   width: 100% !important;
 }
-/* line 173, ../scss/modules/media-selection.scss */
+/* line 172, ../scss/modules/media-selection.scss */
 .media-selection-overlay-dropzone-container .husky-overlay-backdrop {
   display: none !important;
 }
-/* line 177, ../scss/modules/media-selection.scss */
+/* line 176, ../scss/modules/media-selection.scss */
 .media-selection-overlay-dropzone-container .overlay-content {
   height: auto !important;
   background-color: transparent;
 }
 
-/* line 183, ../scss/modules/media-selection.scss */
+/* line 182, ../scss/modules/media-selection.scss */
 .media-selection-overlay-content-title {
-  color: #999;
-  padding-bottom: 10px;
+  margin-bottom: 20px !important;
+  border-bottom: none !important;
 }
 
-/* line 188, ../scss/modules/media-selection.scss */
+/* line 187, ../scss/modules/media-selection.scss */
 .media-selection-overlay-datagrid-container {
   padding-right: 20px;
   padding-bottom: 20px;
 }
 
-/* line 193, ../scss/modules/media-selection.scss */
-.media-selection-overlay-header {
+/* line 192, ../scss/modules/media-selection.scss */
+.media-selection-overlay-datagrid-header {
   white-space: nowrap;
 }
 
-/* line 197, ../scss/modules/media-selection.scss */
+/* line 196, ../scss/modules/media-selection.scss */
 .media-selection-overlay-selected-info {
   display: inline-block;
   vertical-align: top;
