--- a/src/Sulu/Bundle/ContactBundle/Resources/views/Template/base.form.html.twig
+++ b/src/Sulu/Bundle/ContactBundle/Resources/views/Template/base.form.html.twig
@@ -71,6 +71,7 @@
                                         <span data-mapper-property="postboxNumber" data-form="true"></span>
                                         <span data-mapper-property="postboxPostcode" data-form="true"></span>
                                         <span data-mapper-property="postboxCity" data-form="true"></span>
+                                        <span data-mapper-property="title" data-form="true"></span>
                                     </div>
 
                                     <~ if(billingAddress && deliveryAddress) { ~>
