--- a/src/Sulu/Bundle/ContentBundle/Resources/views/Template/content-types/url.html.twig
+++ b/src/Sulu/Bundle/ContentBundle/Resources/views/Template/content-types/url.html.twig
@@ -1,13 +1,12 @@
 <div id="{{ id|raw }}"
      data-property='{{ property|json_encode }}'
      data-mapper-property="{{ property.name }}"
-     data-aura-component="input@husky"
-     data-aura-skin="url"
+     data-aura-component="url-input@husky"
      data-aura-instance-name="{{ id|raw }}"
-     data-aura-input-id="{{ id|raw }}"
-     data-type="husky-input"
+     data-aura-input-class="no-preview-update"
+     data-type="url-input"
      data-form="true"
-     class="preview-update trigger-save-button"
+     class="preview-change-update trigger-save-button"
      {% if property.mandatory %}data-validation-required="true"{% endif %}></div>
 
 <div class="block-content" data-sort-mode-id="{{ id|raw }}"></div>
