changed external link input

--- a/src/Sulu/Bundle/ContentBundle/Resources/views/Template/settings.html.twig
+++ b/src/Sulu/Bundle/ContentBundle/Resources/views/Template/settings.html.twig
@@ -84,8 +84,7 @@
                             <label class="pointer"><%=translate('sulu.content.form.settings.type.external-link.url')%></label>
 
                             <div id="external"
-                                 data-aura-component="input@husky"
-                                 data-aura-skin="url"
+                                 data-aura-component="url-input@husky"
                                  data-aura-instance-name="external"
                                  data-aura-input-id="external"
                                  class="trigger-save-button"></div>
