--- a/src/Sulu/Bundle/ContentBundle/Resources/views/Template/content-types/url.html.twig
+++ b/src/Sulu/Bundle/ContentBundle/Resources/views/Template/content-types/url.html.twig
@@ -4,7 +4,11 @@
      data-aura-component="url-input@husky"
      data-aura-instance-name="{{ id|raw }}"
      data-aura-input-class="no-preview-update"
+     data-aura-scheme="{{ params.defaults.value.scheme.value | default('http://') }}"
+     data-aura-specific-part="{{ params.defaults.value.specific_part.value | default('') }}"
+     data-aura-schemes="{{ sulu_parameter_to_names_array(params.schemes.value) | json_encode }}"
      data-type="url-input"
+     data-type-schemes="{{ sulu_parameter_to_names_array(params.schemes.value) | json_encode }}"
      data-form="true"
      class="preview-change-update trigger-save-button"
      {% if property.mandatory %}data-validation-required="true"{% endif %}></div>
